grace.interpreter/src/test/resources/08_aliasing/exclude03.grace
class A {
  method f { 5; };
};

class B {
  inherit A;
};

object {
  inherit B exclude f;
  print(f); // error
};